# PIDloop

./: CMakeLists.txt  README.md  main.cpp
docs/: pid_calc.md
forms/: CMakeLists.txt  mainwindow.ui  realtimeplot.ui  settings.ui
src/app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  real_time_plot.cpp  real_time_plot.h  settings.cpp  settings.h
src/logic/: CMakeLists.txt  config.h  config_parser.cpp  config_parser.h  data_fetch.cpp  data_fetch.h  device.h  pid_control.cpp  pid_control.h  state.h  xml_parser.cpp  xml_parser.h
test_data/: KIP2-MXC1_2024-07-25.txt  extx-myc2-param.txt  kip2-mxc1-param.txt
test_data/raw/: extx-myc2.csv  kip2-mxc1.csv
test_data/scripts/: fit.py
tests/: data_calc.cpp  data_calc.h  test_data.cpp  test_data.h
